# rollup-plugin-rust

./: .gitignore  README.md  index.js  package.json
example/: .gitignore  Cargo.toml  package.json  rollup.config.js  rust-toolchain.toml
example/src/: lib.rs
src/: cargo.js  index.d.ts  index.js  typescript.js  utils.js  wasm-bindgen.js  wasm-opt.js
tests/: .gitignore  Cargo.toml  package.json  rollup.config.js
tests/src/: bar.js  foo.js
tests/src/bar/: Cargo.toml
tests/src/bar/src/: lib.rs
tests/src/foo/: Cargo.toml  package.json
tests/src/foo/src/: lib.rs
