[package]
name = "foo"
version = "0.1.0"
authors = ["You <you@example.com>"]
edition.workspace = true
categories = ["wasm"]

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.58"
console_error_panic_hook = "0.1.6"

[dependencies.web-sys]
version = "0.3.35"
features = [
    "console",
]
